@@ -2,6 +2,7 @@ Version Next
 
     - Fixed bug where \t separator was being skipped as whitespace
     - Allow duplicate column names if the "-c" flag avoids them
+    - Fixed "-c" bug where extra data columns were being returned as "colX"
 
 Version 1.3.2 released January 25, 2023
 
